--- a/css/estilos.css
+++ b/css/estilos.css
@@ -73,6 +73,9 @@ body {
   .texto_producto {
     min-height: 60px;
   }
+  .texto_producto_categoria {
+    min-height: 60px;
+  }
 }
 @media (max-width: 900px) {
   .footer .menu,
@@ -113,9 +116,6 @@ body {
     display: grid;
     grid-template-columns: 2fr auto;
   }
-  .bg-light {
-    background-color: transparent;
-  }
   .breadcrumbs {
     display: none;
   }
@@ -146,7 +146,7 @@ body {
     position: absolute;
     top: 20%;
   }
-  .texto_producto {
+  .texto_producto_categoria {
     min-height: 100px;
   }
 }
@@ -316,7 +316,7 @@ li a,
   font-size: 15px;
 }
 
-.texto_producto {
+.texto_producto, .texto_producto_categoria {
   font-weight: 900;
   font-size: 12px;
   font-style: normal;
