--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -90,6 +90,11 @@ body {
   .texto_producto {
     min-height: 60px;
   }
+
+  .texto_producto_categoria {
+    min-height: 60px;
+  }
+
 }
 
 @media (max-width: 900px) {
@@ -140,10 +145,6 @@ body {
     grid-template-columns: 2fr auto;
   }
 
-  .bg-light {
-    background-color: transparent;
-  }
-
   .breadcrumbs {
     display: none;
   }
@@ -179,7 +180,7 @@ body {
     top: 20%;
   }
 
-  .texto_producto {
+  .texto_producto_categoria {
     min-height: 100px;
   }
 }
@@ -349,7 +350,7 @@ li a,
   font-size: 15px;
 }
 
-.texto_producto {
+.texto_producto, .texto_producto_categoria {
   font-weight: 900;
   font-size: 12px;
   font-style: normal;
