Correciones generales HTML/CSS v02

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -76,6 +76,11 @@ body {
   .texto_producto_categoria {
     min-height: 60px;
   }
+  .cantidad_carro {
+    grid-area: cantidad_carro;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+  }
 }
 @media (max-width: 900px) {
   .footer .menu,
@@ -148,6 +153,11 @@ body {
   }
   .texto_producto_categoria {
     min-height: 100px;
+  }
+  .cantidad_carro {
+    grid-area: cantidad_carro;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
   }
 }
 .marcas div {
@@ -479,15 +489,14 @@ li a,
   grid-area: precio;
 }
 
-.cantidad_carro {
-  grid-area: cantidad_carro;
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-}
-
 .boton_quitar {
   align-items: center;
   display: flex;
+}
+
+.cantidad {
+  display: flex;
+  align-self: center;
 }
 
 /*# sourceMappingURL=estilos.css.map */
