--- a/css/estilos.css
+++ b/css/estilos.css
@@ -158,6 +158,7 @@ body {
     grid-area: cantidad_carro;
     display: grid;
     grid-template-columns: 1fr 2fr;
+    gap: 15px;
   }
 }
 .marcas div {
@@ -404,6 +405,8 @@ li a,
 }
 .menu_categoria {
   grid-area: menu_categorias;
+  padding: 20px 0;
+  width: 85%;
 }
 
 .ofertas {
@@ -424,11 +427,6 @@ li a,
 
 .marcas {
   grid-area: marcas;
-}
-
-.padding {
-  padding: 20px 0;
-  width: 85%;
 }
 
 .list-group {
